2018-09-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/meta.c (parse8BIM): Eliminate repeated use of strlen()
	which scans the entire remaining string on each cycle.  Fixes
	oss-fuzz 10667 "graphicsmagick/coder_IPTCTEXT_fuzzer: Timeout in
	graphicsmagick_coder_IPTCTEXT_fuzzer". (Credit to OSS-Fuzz)

2018-09-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (MagickGetToken): Fix possible read up to four
	bytes beyond end of stack allocated token buffer.  Fixes oss-fuzz
	10653 "graphicsmagick/coder_MVG_fuzzer: Stack-buffer-overflow in
	MagickGetToken". (Credit to OSS-Fuzz)

2018-09-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/coder_fuzzer.cc (LLVMFuzzerTestOneInput): Limit the
	maximum number of JPEG progressive scans to 50.

	* coders/jpeg.c (ReadJPEGImage): Apply a default limit of 100
	progressive scans before the reader quits with an error.  This
	limit may be adjusted using the -define mechanism like -define
	JPEG:max-scan-number=500.  Also respond more quickly to files
	which exceed the maximum image dimensions.  Fixes oss-fuzz 10258
	"graphicsmagick/coder_JPEG_fuzzer: Timeout in
	graphicsmagick_coder_JPEG_fuzzer". (Credit to OSS-Fuzz)

2018-09-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (ReadMNGImage): mng_LOOP chunk must be at least 5
	bytes long.  Fixes oss-fuzz 10455
	"graphicsmagick/coder_MNG_fuzzer: Use-of-uninitialized-value in
	ReadMNGImage". (Credit to OSS-Fuzz)

2018-09-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (TraceEllipse): Detect arithmetic overflow when
	computing the number of points to allocate for an ellipse.  Fixes
	oss-fuzz 10306 "graphicsmagick/coder_MVG_fuzzer:
	Heap-buffer-overflow in TracePoint". (Credit to OSS-Fuzz)

2018-09-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateEXIFAttribute): Eliminate undefined
	shift.  Also right-sized involved data types.  Fixes oss-fuzz